# FastAPI

과제/1일차/myproject/fastapi_assignment/: main.py
과제/2일차/myproject/fastapi_assignment/: main.py
과제/3일차/myproject/: pyproject.toml  setup_fastapi.sh
과제/3일차/myproject/fastapi_assignment/: main.py
과제/3일차/myproject/fastapi_assignment/app/models/: movies.py  users.py
과제/3일차/myproject/fastapi_assignment/app/routers/: movies.py  users.py
과제/3일차/myproject/fastapi_assignment/app/schemas/: movies.py  users.py
과제/3일차/myproject/fastapi_assignment/app/utils/: jwt.py
과제/4일차/myproject/: pyproject.toml
과제/4일차/myproject/fastapi_assignment/: .env  main.py
과제/4일차/myproject/fastapi_assignment/app/configs/: __init__.py  base.py  database.py
과제/4일차/myproject/fastapi_assignment/app/models/: base.py  movies.py  users.py
과제/4일차/myproject/fastapi_assignment/app/routers/: movies.py  users.py
과제/4일차/myproject/fastapi_assignment/app/schemas/: movies.py  users.py
과제/4일차/myproject/fastapi_assignment/app/utils/: auth.py  jwt.py
과제/5일차/myproject/: pyproject.toml
과제/6일차/myproject/fastapi_assignment/: main.py
과제/6일차/myproject/fastapi_assignment/app/: main.py
라이브세션/5일차/my_blog_api/: pyproject.toml  test.db
라이브세션/5일차/my_blog_api/app/: dependencies.py  main.py
라이브세션/5일차/my_blog_api/app/core/: settings.py
라이브세션/5일차/my_blog_api/app/crud/: user.py
라이브세션/5일차/my_blog_api/app/db/: session.py
라이브세션/5일차/my_blog_api/app/models/: user.py
라이브세션/5일차/my_blog_api/app/routers/: auth.py  user.py
라이브세션/5일차/my_blog_api/app/schemas/: user.py
(+27 files in other folders)
