[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "FastAPI project"
authors = ["admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"
passlib = "^1.7.4"
argon2-cffi = "^23.1.0"
pydantic = "^2.6.0"
tortoise-orm = {extras = ["asyncmy"], version = "^0.25.1"}
aerich = "^0.9.2"
tomlkit = "^0.13.3"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
cryptography = "^46.0.3"
pyjwt = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
